sandbox/output
StringCalculator.java:20: error: cannot find symbol
            String[] numberArray = numbers.split("\n");
                                   ^
  symbol:   variable numbers
  location: class StringCalculator
StringCalculator.java:21: error: variable number is already defined in method valueOf(String)
            for (String number : numberArray) {
                        ^
2 errors
